--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,13 +13,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+a,
+select {
   font-weight: 500;
-  color: #646cff;
+
   text-decoration: inherit;
+  font-size: 18px;
 }
 a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -28,7 +29,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  color: hsl(212, 53%, 51%);
+  color: hsl(212, 73%, 68%);
 }
 
 h1 {
@@ -48,7 +49,6 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
@@ -61,9 +61,21 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
   }
   button {
     background-color: #f9f9f9;
   }
+}
+
+select {
+  color: hsl(212, 53%, 51%);
+  background-color: white;
+  border-radius: 8px;
+  border: 1px solid hsl(212, 53%, 51%);
+  width: 200px;
+  height: 50px;
+}
+
+p {
+  font-size: 20px;
 }
